@@ -1,3 +1,8 @@
+Sat Jun 13 17:39:07 CEST 2009 Guido Günther <agx@sigxcpu.org>
+
+	* src/krb5-auth-applet.c (ka_applet_create_context_menu): use
+	gtk_image_menu_item_new_from_stock for stock menu entries
+
 Sat Jun 13 17:14:34 CEST 2009 Guido Günther <agx@sigxcpu.org>
 
 	* po/krb5-auth-dialog.pot: remove 
